--- a/HelloWorldv2/webapp/manifest.json
+++ b/HelloWorldv2/webapp/manifest.json
@@ -23,7 +23,7 @@
 		"viewName": "sandesh.view.App",
 		"type": "XML",
 		"async": true,
-		"id": app
+		"id": "app"
 	},
 	"dependencies": {
 		"minUI5Version": "1.30",
