Error: Implement CSS Update: style.ss, manifest.json, app.view.xml

--- a/HelloWorldv2/webapp/manifest.json
+++ b/HelloWorldv2/webapp/manifest.json
@@ -37,7 +37,14 @@
 			"settings": {
 				"bundleName": "sandesh.i18n.i18n"
 			}
+		}	
+	},
+	"resources": {
+		"css": [	
+			{
+				"uri": "css/style.css"
+			}
+		  ]	
 		}
 	}
-  }
 }
